Add Font Awesome Icons

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+   <link
+     rel="stylesheet"
+     href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+   />
    <title>Danielle Lynch - Web Developer</title>
  </head>
  <body>
@@ -14,7 +18,7 @@
            <div class="site-header">Danielle Lynch</div>
            <div class="site-subheader">Web Developer</div>
            <ul class="site-navigation">
-             <li><a href="index.html">Home</a></li>
+             <a href="index.html"><i class="fas fa-home"></i> Home</a>
            </ul>
          </div>
        </nav>
@@ -22,6 +26,7 @@
        <main>
          <div class="menu">
            <div class="menu-icon" id="sidebarCollapse">
+             <i class="fas fa-bars"></i>
              <span class="mobile-header">Danielle Lynch: Web Developer</span>
            </div>
          </div>
@@ -84,7 +89,7 @@
          </article>
 
          <footer>
-           Made with ❤️ in Ottawa, Ontario. © 2018 All Rights Reserved
+           Made with ❤️ in Your Location Here. © 2018 All Rights Reserved
          </footer>
        </main>
      </div>
