--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
-   <meta charset="UTF-8" />
-   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"/>
    <link
      rel="stylesheet"
      href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
    />
-   <title>Danielle Lynch - Web Developer</title>
- </head>
+  <link rel="stylesheet" href="assets/css/style.css"/>
+  <title>Danielle Lynch - Web Developer</title>
+</head>
  <body>
    <div class="parent">
      <div class="wrapper">
@@ -18,7 +20,7 @@
            <div class="site-header">Danielle Lynch</div>
            <div class="site-subheader">Web Developer</div>
            <ul class="site-navigation">
-             <a href="index.html"><i class="fas fa-home"></i> Home</a>
+             <a href="index.html"><i class="fas fa-home"></i> Home  </a>
            </ul>
          </div>
        </nav>
