--- a/index.html
+++ b/index.html
@@ -13,15 +13,19 @@
  <body>
    <div class="parent">
      <div class="wrapper">
-       <nav>
-         <div class="inner-wrap">
-           <div class="site-header">Danielle Lynch</div>
-           <div class="site-subheader">Web Developer</div>
-           <ul class="site-navigation">
-             <a href="index.html"> </a>
-           </ul>
-         </div>
-       </nav>
+     <nav>
+  <div class="inner-wrap">
+    <div class="site-header">Danielle Lynch</div>
+    <div class="site-subheader">Web Developer</div>
+    <ul class="site-navigation">
+      <li>
+        <a href="index.html"><i class="fas fa-home"></i> Home</a>
+      </li>
+      <li>
+        <a href="about.html"><i class="fas fa-id-card"></i> About</a></li>
+    </ul>
+  </div>
+</nav>
 
        <main>
          <div class="menu">
